# COWTODO

./: CHANGELOG  CHANGELOG.txt  CMakeLists.txt  Makefile  README.md  TODO  TODO.txt  cowtodo.py
_old_files/: README.md
_old_files/docs/: site_info
scripts/: download-dependencies.lua
src/: ExcludeDirsRC.cpp  ExcludeDirsRC.h  Logger.cpp  Logger.h  main.cpp
